tests/ui/rust-2018/async-ident-allowed.stderr
error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident-allowed.rs:9:9
   |
LL |     let async = 3;
   |         ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
note: the lint level is defined here
  --> $DIR/async-ident-allowed.rs:3:9
   |
LL | #![deny(rust_2018_compatibility)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   = note: `#[deny(keyword_idents_2018)]` implied by `#[deny(rust_2018_compatibility)]`

error: aborting due to 1 previous error

